[package]
name = "autosurgeon-cat-derive"
version = "0.1.1"
edition = "2024"
description = "Derive macros for autosurgeon-cat: Hydrate and Reconcile"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints.clippy]
all = "deny"
pedantic = "warn"
