[package]
name = "autosurgeon-cat"
version = "0.1.2"
edition = "2024"
description = "Derive-driven mapping between Rust types and automerge-cat documents"
license = "MIT"
keywords = ["crdt", "category-theory", "automerge", "derive", "hydrate"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
comp-cat-rs = "0.4"
automerge-cat = "0.3.0"
autosurgeon-cat-derive = { version = "0.1.0", path = "../autosurgeon-cat-derive" }

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = "deny"
pedantic = "warn"
